--- a/projects/ng-apexcharts/package.json
+++ b/projects/ng-apexcharts/package.json
@@ -3,8 +3,7 @@
   "version": "1.7.7",
   "description": "An angular implementation of ApexCharts",
   "type": "module",
-  "scripts": {
-  },
+  "scripts": {},
   "peerDependencies": {
     "@angular/common": "16.0.1",
     "@angular/core": "16.0.1",
@@ -34,6 +33,7 @@
     "url": "https://github.com/apexcharts/ng-apexcharts.git"
   },
   "devDependencies": {
-    "ng-packagr": "^16.0.1"
+    "ng-packagr": "^16.0.1",
+    "prettier": "^2.8.8"
   }
 }
