--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,7 @@ projects/ng-apexcharts/node_modules
 /out-tsc
 
 # dependencies
-/node_modules
+node_modules
 
 # profiling files
 chrome-profiler-events.json
